@@ -27,6 +27,7 @@ Revision 4.2.6rc0
 - AbstractTransportDispatcher's jobStarted() and jobFinished() methods
   now accept optional 'count' parameter which is a way for an app to indicate
   how many responses are expected or have been processed in bulk.
+- Example script on SNMP Agents UDP broadcast-based discovery added.
 - Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
   cope with missing bits identifieirs at prettyPrint().
 - Memory leak fixed in CommandForwarder examples.
